--- a/.github/workflows/main_likelion-mydays-be-sw.yml
+++ b/.github/workflows/main_likelion-mydays-be-sw.yml
@@ -13,36 +13,43 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java version
+      - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
-          distribution: 'microsoft'
+          distribution: 'temurin'
 
-      - name: Build with Maven
-        run: mvn clean install
+      # ✅ gradlew 실행 권한 부여 (backend 폴더 기준)
+      - name: Grant execute permission for gradlew
+        run: chmod +x backend/gradlew
 
+      # ✅ Gradle 빌드 (bootJar)
+      - name: Build with Gradle (bootJar)
+        working-directory: backend
+        run: ./gradlew clean bootJar -x test
+
+      # ✅ 배포 단계로 넘길 jar 업로드
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: backend/build/libs/*.jar
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-      
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
