--- a/.github/workflows/main_likelion-mydays-be-sw.yml
+++ b/.github/workflows/main_likelion-mydays-be-sw.yml
@@ -17,6 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+            - name: Show repo structure
+        run: |
+          pwd
+          ls -la
+          find . -maxdepth 3 -type f -name "gradlew" -o -name "build.gradle" -o -name "settings.gradle"
+
 
       - name: Set up Java 17
         uses: actions/setup-java@v4
@@ -58,3 +64,4 @@ jobs:
           slot-name: 'Production'
           package: '*.jar'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_29E0B12AB4B24B9BA4D7C39E51456695 }}
+
