--- a/.github/workflows/main_likelion-mydays-be-sw.yml
+++ b/.github/workflows/main_likelion-mydays-be-sw.yml
@@ -1,5 +1,5 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# Docs for the Azure Web Apps Deploy action:
+# https://github.com/Azure/webapps-deploy
 
 name: Build and deploy JAR app to Azure Web App - likelion-mydays-be-sw
 
@@ -16,31 +16,28 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
-            - name: Show repo structure
-        run: |
-          pwd
-          ls -la
-          find . -maxdepth 3 -type f -name "gradlew" -o -name "build.gradle" -o -name "settings.gradle"
+      # 1️⃣ 레포 체크아웃
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-
+      # 2️⃣ Java 17 설정
       - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # ✅ gradlew 실행 권한 부여 (backend 폴더 기준)
+      # 3️⃣ gradlew 실행 권한 (backend 기준)
       - name: Grant execute permission for gradlew
         run: chmod +x backend/gradlew
 
-      # ✅ Gradle 빌드 (bootJar)
+      # 4️⃣ Gradle 빌드 (bootJar)
       - name: Build with Gradle (bootJar)
         working-directory: backend
         run: ./gradlew clean bootJar -x test
 
-      # ✅ 배포 단계로 넘길 jar 업로드
-      - name: Upload artifact for deployment job
+      # 5️⃣ 산출물 업로드
+      - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: java-app
@@ -51,17 +48,17 @@ jobs:
     needs: build
 
     steps:
-      - name: Download artifact from build job
+      # 6️⃣ 빌드 산출물 다운로드
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: java-app
 
+      # 7️⃣ Azure Web App 배포
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'likelion-mydays-be-sw'
-          slot-name: 'Production'
+          app-name: likelion-mydays-be-sw
+          slot-name: Production
           package: '*.jar'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_29E0B12AB4B24B9BA4D7C39E51456695 }}
-
